web/home.scss
@import "./common.scss";

.page {
  background: #f0f3f4;
  width: 100%;
  height: $pageHeight;
  overflow: scroll;

  .header {
    background: $colorDark;
    width: 100%;
    height: $headerHeight;

    img {
      padding-left: 1em;
      height: $headerHeight - 16px;
      padding-top: 12px;
    }
  }

  .msgpane {
    float: left;
    margin-left: 1%;
    width: 45%;
    height: $pageHeight - $headerHeight;
    overflow: scroll;
    border-right: 2px solid #edf1f2;
    border-left: 2px solid #edf1f2;
    background: linear-gradient($bgwhite, #f7f7ff);
    color: $colorText;

    .title {
      font-weight: 700;
      text-align: center;
      font-size: 2rem;
      margin-bottom: 1rem;
      margin-top: 2rem;
    }
    .subtitle {
      font-size: 1.8rem;
      margin-bottom: 4rem;
      font-weight: 500;
      line-height: 1.2;
      text-align: center;
    }

    .msgblock {
      overflow: scroll;
      height: $pageHeight - $headerHeight - 200px;
    }

    .msg {
      position: relative;
      font-size: 0.9rem;
      border-bottom: 1px solid $colorBorder;
      padding-bottom: 1rem;
      margin: 1.4rem 2rem;
      animation: slideIn 600ms ease-in-out;

      img {
        display: block;
        width: 2.5rem;
        height: 2.5rem;
        border-radius: 50%;
        position: absolute;
        top: 0px;
        left: 1rem;
      }
      .name,
      .txt {
        padding: 0;
        width: 80%;
        margin-left: 4.5rem;
      }
      .txt p:first-child {
        width: 55%;
      }
      .txt {
        line-height: 1.4rem;
        font-weight: 400;
        overflow: scroll;
      }
      .txt.just-emojis {
        line-height: 1em;
        font-size: 4em;
      }
      .name {
        font-weight: 700;
        margin-bottom: 0.5rem;
      }
      .tm {
        position: absolute;
        top: 0;
        right: 3rem;
        font-size: 0.8rem;
        color: $colorFaded;
      }
    }

    .botmsg {
      width: 85%;
      margin: 24px;
      margin-bottom: 50px;
      animation: slideIn 600ms ease-in-out;

      img {
        display: inline-block;
        width: 48px;
        margin-right: 32px;
        transform: translateY(-6px);
        border-radius: 24px;
      }
      .txt {
        width: 80%;
        display: inline-block;
        border-radius: 8px;
        padding: 24px 16px;
        background: lighten($salesblue,30%);
        background: linear-gradient(45deg, lighten($salesblue, 35%), lighten($salesblue,30%));
        border: 1px solid lighten($salesblue, 30%);
        box-shadow: 1px 1px 2px 0 lighten($salesblue, 40%);
        color: #334;
      }
    }
  }

  .reportpane {
    float: right;
    width: 38%;
    height: $pageHeight - $headerHeight;
    background: #f6f8f8;
    overflow: scroll;
    color: #334;

    .title {
      font-size: 1.2em;
      font-weight: thin;
      padding: 12px 32px;
      margin: 0;
      background: $bgwhite;
      border: 1px solid $lightgrey;
    }

    .userreport {
      margin: 24px;
      margin-bottom: 64px;
      padding: 18px 24px;
      border-radius: 2px;
      border: 1px solid $lightgrey;
      background: $bgwhite;

      .name {
        font-size: 32px;
        padding-bottom: 12px;
        margin-bottom: 12px;
        border-bottom: 1px solid $lightgrey;
      }

      table {
        border-collapse: collapse;
        width: 100%;
      }

      table, th, td {
        border: 1px solid $grey;
        padding: 4px;
      }
      th {
        height: 32px;
        color: #777;
      }
      td {
        height: 32px;
        color: darken(#777, 10%);
        text-align: center;
        font-size: 0.8em;
      }


      .id {
        font-size: 0.7em;
        font-weight: bold;
        border-top: 1px solid $lightgrey;
        margin-top: 12px;
        text-align: right;
        color: #777;;
      }

    }
  }

  .userpane {
    float: left;
    width: 15%;
    height: $pageHeight - $headerHeight;
    background: $deepblue;
    padding: 1em;

    $iconsz: 64px;
    .usericon {
      float: left;
      width: $iconsz;
      height: $iconsz;
      line-height: $iconsz;
      font-size: $iconsz / 2;
      text-align: center;
      border: 1px solid;
      background: $bgwhite;
      border-radius: $iconsz / 2;
      margin-right: $iconsz / 6;
    }
    .name {
      margin-top: $iconsz / 6;
      color: $bgwhite;
    }
    .tz {
      font-size: 0.6em;
      margin-top: 4px;
      color: $bgwhite;
    }
    .email {
      margin-top: 6px;
      color: $bgwhite;
      font-size: 0.8em;
      padding-left: 0px;
    }



    .logoutx {
      width: 80%;
      text-align: center;
      margin: 0 auto;
      margin-top: 32px;
      padding: 8px;
      background: $salesblue;
      border-radius: 4px;
      color: white;
      cursor: pointer;
    }
    .logoutx:hover {
      background: lighten($salesblue, 5%);
      color: $bgwhite;
      box-shadow: 0 0 1px 0 white;
    }

  }
}

@keyframes slideIn {
  0%{
        transform: skewX(70deg) translateX(-100px);
        opacity: 0;
    }
    50%{
        transform: skew(0deg);
    }
    100%{
        transform: skew(0deg) translateX(0);
    }
}

@keyframes slideInRight {
  0%{
        transform: skewX(-70deg) translateX(100px);
        opacity: 0;
    }
    50%{
        transform: skew(0deg);
    }
    100%{
        transform: skew(0deg) translateX(0);
    }
}

@keyframes fadein {
  from { opacity: 0; }
  to { opacity: 1; }
}
@keyframes fadeout {
  from { opacity: 1; }
  to { opacity: 0; }
}
.page {
  animation: fadein ease-out 500ms;
}
.page.bye {
  animation: fadeout ease-in 300ms;
  opacity: 0;
}

